--- a/hazelcast/pom.xml
+++ b/hazelcast/pom.xml
@@ -489,9 +489,9 @@
             <artifactId>jackson-jr-annotation-support</artifactId>
         </dependency>
 		<dependency>
-			<groupId>com.github.LanternPowered</groupId>
-			<artifactId>Lmbda</artifactId>
-			<version>d1ffaabac3244551a7b65e6130d9ab2e8a21fc54</version>
+            <groupId>org.lanternpowered</groupId>
+            <artifactId>lmbda</artifactId>
+            <version>2.0.0</version>
 		</dependency>
         <dependency>
             <groupId>org.snakeyaml</groupId>
